# my-ascent-app

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ascent-alert-from-github.yml  ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: mcp_servers.json
backend/src/: main.py
backend/src/api/routes/: health.py  incidents.py  research.py  support.py  tools.py  webhooks.py  workflows.py
backend/src/core/: config.py  logging.py
backend/src/db/: models.py  schema.sql  session.py
backend/src/events/: bus.py
backend/src/llm/: router.py
backend/src/mcp/: client_manager.py  registry.py  tool_map.py
backend/src/memory/: qdrant_store.py
backend/src/modules/incident/: agents.py  evidence_normalize.py  graph.py  persist.py  service.py  state.py
backend/src/modules/research/: constants.py  graph.py  scheduler.py  service.py
backend/src/modules/support/: email_delivery.py  graph.py  kb_catalog.py  service.py  support_kb.json
backend/src/observability/: metrics.py  tracing.py
backend/src/workers/: main.py
backend/src/workflows/temporal/: activities.py  incident_workflow.py
backend/tests/: test_llm_providers.py
demo-apps/incident-demo-webapp/: Dockerfile  app.py  requirements.txt
docs/: ARCHITECTURE.md  MCP_SETUP.md
docs/diagrams/: incident-lifecycle.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace  (+1 more)
mcp-servers/: README.md  requirements.txt
scripts/: demo_incident.sh  e2e-test.ps1  start.ps1  stop.ps1  wait.js
(+282 files in other folders)
